# dataStorage

./: README.md
backend/: 1.json  classes.py  database.py  main.py  methods.py  settings.py  utils.py
backend/microservices/crypto/: CMakeLists.txt  main.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
